data/derived/comb/progs/unify/prog4152.ml.out
Characters 85-86:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (('a -> 'b) -> 'c) -> 'b -> 'c
       but an expression was expected of type
         (('a -> 'b) -> 'c) -> 'b -> ('a -> 'b) -> 'c
       The type variable 'c occurs inside ('a -> 'b) -> 'c
